--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>신경과 랜덤 Post-test 퀴즈</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="manifest" href="manifest.json">
-<style>
-/* 원본 스타일 절대 변경 없음 */
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>신경과 랜덤 Post-test 퀴즈</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
+    #quiz-container { max-width: 600px; margin: auto; }
+    .btn { padding: 10px 20px; margin: 5px; font-size: 16px; }
+    #progress-bar { height: 20px; background: #4CAF50; width: 0%; }
+    #progress-container { width: 100%; background: #ddd; margin: 10px 0; }
+  </style>
 </head>
 <body>
-<div id="quiz-container">
-  <!-- 원본 UI 그대로 -->
-  <div id="question-container"></div>
-  <div id="answer-container"></div>
-  <div id="progress-container">
-    <span id="progress-text"></span>
-    <div id="progress-bar-bg">
+  <div id="quiz-container">
+    <h1>신경과 랜덤 Post-test 퀴즈</h1>
+    <div id="progress-container">
       <div id="progress-bar"></div>
     </div>
+    <div id="progress-text"></div>
+    <div id="question"></div>
+    <div id="answer" style="display:none; margin-top:10px; color:blue;"></div>
+    <button id="show-answer" class="btn">정답 보기</button>
+    <button id="next" class="btn">다음</button>
+    <button id="review-mode" class="btn">복습 모드</button>
+    <!-- 추가 -->
+    <button id="remove-wrong" class="btn" style="display:none;">오답 제거</button>
+    <button id="restart-review" class="btn" style="display:none;">처음으로 돌아가기</button>
   </div>
-  <button id="next-btn">다음</button>
-  <button id="review-btn">복습 모드</button>
-  <!-- 새 버튼 2개: 원본 구조 유지, 처음엔 숨김 -->
-  <button id="restart-review-btn" style="display:none;">복습 처음으로</button>
-  <button id="remove-wrong-btn" style="display:none;">오답 제거</button>
-</div>
 
-<script>
-/* ====== 문제·정답 데이터 ====== */
-const questions = [
+  <script>
+    const questions = [
     { q: "62세 오른손잡이 남자 환자가 Rt. side weakness를 주소 응급실에 내원하였다. 가지고 있는 과거력으로는 HTN, DM, Hyperlipidemia가 있었으며, 50갑년의 흡연력을 가지고 있다. <br>내원 후 시행한 EKG에서 A. fib이 확인되었다. 환자는 증상 발생 후 1시간 이내 본원 응급실로 내원하였다.<br>내원 당시 시행한 신경학적 진찰 상 mental status는 alert 하였으며 moderate dysarthric speech를 보이고 있었다. Language function test 했을 때 묻는 말을 이해할 수 있었으며 의미있는 문장을 구사할 수 없었고, 따라 하기와 이름대기는 불가능하였다. <br>Cranial nerve function test 했을 때 환자의 pupil size 및 light reflex는 정상이었으나 양안 모두 왼쪽으로 치우쳐지려는 경향 보였고, 오른쪽 입고리가 쳐져 있는 모습 보였다. <br>환자의 고개 또한 왼쪽으로 틀어져 있었다. 또한 Nex. 했을 때 Gerstmann syndrome이 보였다.<br>사지 근력을 측정했을 때, 오른쪽 상하지 모두 중력에 대해서는 겨우 들 수 있었다. 통증을 주었을 때 오른쪽 상하지 감각 저하 소견 보였다. 오른쪽 Babinski sign 양성으로 확인 되었다. <br>환자분은 NIHSS 12점으로 측정되었으며, 최근 3주 이내 수술한 기왕력 및 기타 출혈 경향성 등은 모두 정상적이었고, 응급실 내원 후 시행한 lab에서도 큰 이상 보이지 않았다. <br>혈압과 혈당 등 vital sign 모두 정상이었고, initial brain CT 상 hemorrhage 및 hypodense lesion이 없는 것을 확인하였으며, next step으로 촬영한 CT angio perfusion 영상에서 penumbra가 확인 되었다.<br>다음 물음에 답하시오.<br>1. 위 환자의 신경학적 진찰 상 보이는 aphasia의 유형을 쓰시오.<br>2. 위 환자 신경학적 진찰 상 오른쪽 상하지 motor grade 쓰시오.<br>3. 위 환자의 예상되는 진단명을 아는 대로 쓰고, Willis circle에서 문제가 있을 수 있는 혈관들을 아는대로 쓰시고, 내원 후 진행할 수 있는 치료 flow를 아는대로 쓰시오. 이때 제일 중요한 치료법 하나는 꼭 포함할 것.", a: "1. Broca’s aphasia<br><img src='1.png' style='max-width:600px;'><br>2. Grade 3<br><img src='2.png' style='max-width:600px;'><br>3. 진단명: Lt. MCA infarction, Lt. ICA infarction<br>문제되는 혈관: Lt. MCA, Lt, ICA<br>치료: 급성기 치료로 tPA, Intra-arterial thrombectomy를 하고 2차 예방을 위해 anticoagulant를 쓸 수 있다." },
     { q: "Gerstmann syndrome 증상들을 쓰시오.", a: "Agraphia or dysgraphia<br>Acalculia or dyscalculia<br>Finger agnosia<br>Left Right disorientation" },
     { q: "54세 남자환자가 dizziness를 주소로 증상 발생 후 3시간만에 응급실로 내원하였다. 환자는 HTN으로 진단받아 med. 복용하고 있었으며 20갑년의 흡연력이 있었다.<br>신경학적 진찰 상 ipsipulsion과 nystagmus가 있었으며, Rt. side V1-3 region에 감각 저하 및 동측 Honer syndrome 확인되었다. <br>환자는 말할 때 쉰목소리가 나온다고 했으며, 응급실 내원 후 약을 먹기 위해 물을 마실 때 심하게 사래에 걸렸다. <br>또한 가만히 앉아있어도 오른쪽으로 기우는 증상이 발생했으며, Rt. side severe dysmetria 관찰되었다. 또한 점점 왼쪽 상하지 온도, 통증 감각이 저하되는 것 같다고 했다. <br>현재 환자의 신경학적 진찰을 토대로 가장 가능성 있는 진단명을 쓰고, 어떤 혈관에 문제가 생겼을 지 쓰시오.", a: "진단명: Rt. Lateral medullary syndrome<br>혈관: Rt. PICA(posterior inferior cerebellar artery)" },
@@ -40,92 +41,96 @@ const questions = [
     { q: "57세 여자가 headache를 주소로 신경과 외래에 내원하였다. 환자가 호소하는 두통은 일주일 중 거의 5일 동안 발생하였으며, 심할 때는 하루 종일 아프기도 한다고 했다. <br>심할 때 약을 먹으면 조금 호전되기도 하지만 다시 악화된다고 했다.<br>주로 왼쪽 fronto-temporal area에 통증이 있었으며 심장박동 주기처럼 박동성의 욱씬거리는 통증이 있었다. 통증 위치는 여기 저기 돌아다니기도 한다. <br>가장 심할 때 통증강도는 VAS 7-8점 정도이다. 통증이 너무 심할 때는 아무 일도 할 수 없을 정도여서 누워만 있을 정도라고 했다. <br>특히나 큰 소리가 나거나 밝은 빛을 보면 더 심해져서 문을 다 닫고 커튼도 쳐놓고 가만히 누워 있어야 한다고 했다. <br>두통 시작 전에 눈앞에 어른거리는 증상이나 번쩍거림은 없었다고 한다. 다음 물음에 답하시오.<br>위 환자의 진단명을 쓰시고, 치료법을 아는 대로 쓰시오.", a: "진단명: 편두통<br>치료법: triptan과 에르고트로 치료하고, propranolol과 같은 베타차단제를 예방치료에 이용할 수 있습니다." }
   ];
 
-let currentIndex = 0;
-let reviewMode = false;
-let wrongQuestions = [];
-let currentReviewIndex = 0;
+    let currentIndex = 0;
+    let reviewMode = false;
+    let wrongList = [];
+    let currentList = [...questions];
 
-/* ====== 원본 UI 갱신 ====== */
-function showQuestion(idx, list = questions) {
-  const qItem = list[idx];
-  document.getElementById('question-container').innerHTML = qItem.q;
-  document.getElementById('answer-container').innerHTML = qItem.a;
-  updateProgress(idx + 1, list.length);
+    const questionEl = document.getElementById('question');
+    const answerEl = document.getElementById('answer');
+    const progressBar = document.getElementById('progress-bar');
+    const progressText = document.getElementById('progress-text');
+    const showAnswerBtn = document.getElementById('show-answer');
+    const nextBtn = document.getElementById('next');
+    const reviewModeBtn = document.getElementById('review-mode');
+    const removeWrongBtn = document.getElementById('remove-wrong');
+    const restartReviewBtn = document.getElementById('restart-review');
 
-  // 복습 모드에서만 오답 제거 버튼 표시
-  if (reviewMode) {
-    document.getElementById('remove-wrong-btn').style.display = 'inline-block';
-  } else {
-    document.getElementById('remove-wrong-btn').style.display = 'none';
-  }
-
-  // 복습 모드 + 마지막 문제 → "복습 처음으로" 버튼 표시
-  if (reviewMode && idx === list.length - 1) {
-    document.getElementById('restart-review-btn').style.display = 'inline-block';
-  } else {
-    document.getElementById('restart-review-btn').style.display = 'none';
-  }
-}
-
-function updateProgress(current, total) {
-  const percent = total > 0 ? Math.round((current / total) * 100) : 100;
-  document.getElementById('progress-text').textContent = `${current} / ${total}`;
-  document.getElementById('progress-bar').style.width = percent + '%';
-}
-
-/* ====== 이벤트 ====== */
-document.getElementById('next-btn').addEventListener('click', () => {
-  if (!reviewMode) {
-    currentIndex++;
-    if (currentIndex < questions.length) {
-      showQuestion(currentIndex);
+    function renderQuestion() {
+      questionEl.textContent = currentList[currentIndex].q;
+      answerEl.textContent = currentList[currentIndex].a;
+      answerEl.style.display = 'none';
+      updateProgress();
+      if (reviewMode) {
+        removeWrongBtn.style.display = 'inline-block';
+      } else {
+        removeWrongBtn.style.display = 'none';
+      }
+      restartReviewBtn.style.display = 'none';
     }
-  } else {
-    currentReviewIndex++;
-    if (currentReviewIndex < wrongQuestions.length) {
-      showQuestion(currentReviewIndex, wrongQuestions);
-    } else {
-      // 복습 모드 끝 → 진행률 100% 유지
-      updateProgress(wrongQuestions.length, wrongQuestions.length);
-    }
-  }
-});
 
-document.getElementById('review-btn').addEventListener('click', () => {
-  reviewMode = true;
-  wrongQuestions = getWrongQuestionsSomehow(); // 기존 로직 그대로
-  currentReviewIndex = 0;
-  showQuestion(currentReviewIndex, wrongQuestions);
-});
-
-/* ====== 새 기능 ====== */
-// 1. 복습 처음으로 버튼
-document.getElementById('restart-review-btn').addEventListener('click', () => {
-  if (reviewMode) {
-    currentReviewIndex = 0;
-    showQuestion(currentReviewIndex, wrongQuestions);
-  }
-});
-
-// 2. 오답 제거 버튼
-document.getElementById('remove-wrong-btn').addEventListener('click', () => {
-  if (reviewMode && wrongQuestions.length > 0) {
-    wrongQuestions.splice(currentReviewIndex, 1);
-    if (currentReviewIndex >= wrongQuestions.length) {
-      currentReviewIndex = wrongQuestions.length - 1;
+    function updateProgress() {
+      let total = currentList.length;
+      let progress = ((currentIndex + 1) / total) * 100;
+      progressBar.style.width = progress + "%";
+      progressText.textContent = `${currentIndex + 1} / ${total}`;
     }
-    if (wrongQuestions.length > 0) {
-      showQuestion(Math.max(currentReviewIndex, 0), wrongQuestions);
-    } else {
-      // 복습 목록이 비면 진행률 100% 표시
-      updateProgress(0, 0);
-      document.getElementById('question-container').innerHTML = '복습할 문제가 없습니다.';
-      document.getElementById('answer-container').innerHTML = '';
-      document.getElementById('remove-wrong-btn').style.display = 'none';
-      document.getElementById('restart-review-btn').style.display = 'none';
-    }
-  }
-});
-</script>
+
+    showAnswerBtn.addEventListener('click', () => {
+      answerEl.style.display = 'block';
+      if (!reviewMode) {
+        wrongList.push(currentList[currentIndex]);
+      }
+    });
+
+    nextBtn.addEventListener('click', () => {
+      if (currentIndex < currentList.length - 1) {
+        currentIndex++;
+        renderQuestion();
+      } else {
+        // 추가: 복습 모드일 때도 진행률 100% 표시
+        updateProgress();
+        if (reviewMode) {
+          restartReviewBtn.style.display = 'inline-block';
+        }
+      }
+    });
+
+    reviewModeBtn.addEventListener('click', () => {
+      if (wrongList.length === 0) {
+        alert('오답이 없습니다.');
+        return;
+      }
+      reviewMode = true;
+      currentList = [...wrongList];
+      currentIndex = 0;
+      renderQuestion();
+    });
+
+    // 추가: 오답 제거 버튼
+    removeWrongBtn.addEventListener('click', () => {
+      currentList.splice(currentIndex, 1);
+      if (currentList.length === 0) {
+        alert('남은 문제가 없습니다.');
+        restartReviewBtn.style.display = 'inline-block';
+        removeWrongBtn.style.display = 'none';
+        progressBar.style.width = "100%";
+        progressText.textContent = `0 / 0`;
+        return;
+      }
+      if (currentIndex >= currentList.length) {
+        currentIndex = currentList.length - 1;
+      }
+      renderQuestion();
+    });
+
+    // 추가: 복습 모드 처음으로 돌아가기
+    restartReviewBtn.addEventListener('click', () => {
+      currentIndex = 0;
+      renderQuestion();
+    });
+
+    renderQuestion();
+  </script>
 </body>
 </html>
