--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
       return;
     }
 
-    elQuestion.innerText=cur.q;
-    elAnswer.innerText=cur.a;
+    elQuestion.innerHTML = cur.q;
+    elAnswer.innerHTML = cur.a;
     elAnswer.style.display='none';
 
     const currentNumber=info.idx+1;
