--- a/index.html
+++ b/index.html
@@ -63,7 +63,29 @@
     { q: "34세 여자가 Lt. visual disturbance를 주소로 응급실에 내원하였다. 위 증상은 약 1달 전부터 서서히 시작되었다. <br>시력이상과 함께 이전처럼 색깔 구분도 잘 되지 않는다고 하며 왼쪽 눈을 눌렀을 때 pain을 호소하였다. <br>안구통증이나 시야증상은 뜨거운 물에 목욕을 했을 때 더 심해진다고 했다.<br>약 1년 전에는 오른쪽 속 끝에 저런 느낌이 약 1주일 정도 지속되었다가 호전되었다고 했으며, 고개를 아래로 숙였을 때 등을 타고 아래로 뻗치는 찌릿한 느낌이 동반되었다고 한다. <br>현재도 해당 증상은 조금 남아 있다고 했다. 그 외 신경학적 진찰 상 특이 소견은 관찰되지 않았다.<br>응급실 내원 후 촬영한 MRI 상 아래와 같은 소견이 확인되었다. 다음 물음에 답하시오.<br><img src='6.png' style='max-width:600px;'><br>가장 의심되는 질환명과 이와 감별해야 하는 질환을 2개 이상 쓰시오.", a: "의심되는 질환명: MS<br>감별해야 하는 질환: NMO, ADEM" },
     { q: "56세 여자환자가 갑자기 발생한 어지럼증을 주소로 내원하였다. 증상은 자세에 따라 변화가 없었고, 수 시간 동안 지속되었다. 동반된 증상으로 오심, 구토가 있었다. <br>살면서 이런 어지러움은 처음이라고 하였다. 4일 전에 감기 기운이 있어서 근처 내과에서 약을 타 먹었던 적이 있었다고 했다. <br>신경학적 진찰 시, right로 수평성분 nystagmus가 all position에서 관찰되었으며, Alexander’s law를 만족하였다. 그 밖에 청력저하 등 ear symptom은 없었다. <br>이 환자에서 가장 의심되는 진단명 한 개를 쓰고 감별해야 하는 질환 두 가지를 쓰시오. 또 해당 진단명일 때 꼭 시행해봐야 하는 neurology를 쓰시오.", a: "진단명: Lt. vestibular neuritis<br>감별질환: BPPV, Meniere disease<br>Neurology: HINTS(head impulse test, gaze evoked nystagmus, test for skew deviation)" },
     { q: "응급실에 36세 남자가 양측 하지 위약감을 내원하였다. 특이 과거력 진단받은 적은 없으나, 4일 전에 혼자 야식으로 치킨을 먹은 후 배탈이 난 적이 있었다고 했다. <br>배탈 난 후 양쪽 다리가 무거운듯한 느낌이 있었으나 특별히 거동 문제는 없었다고 했다. 현재는 하지 위약감 증상이 점점 악화되어 응급실로 내원하였다.<br>응급실 내원 당시 신경학적 진찰 상 facial palsy 있었으며 bilateral lower extremity grade 4로 측정되었다. 환자분 현재 양측 다리에 paresthesia도 동반되고 있다고 했다.<br>DTR 시행했을 때 양측 knee jerk에서 DTR 보이지 않았다. 다음 물음에 답하시오.<br>1. 상기 환자 신경학적 진찰 상 가장 의심되는 질환명을 쓰고, 해당 진단명의 진단기준을 아는 대로 쓰시오.<br>2. 위 질환명을 의심했을 때 시행해야 하는 검사와 특징적인 검사 소견을 쓰시오.", a: "질환명: Guillain-Barre syndrome<br>진단기준: 사진 참조<br><img src='5.png' style='max-width:600px;'><br>시행검사: NCS, CSF<br>검사 소견: NCS: demyelination 소견, CSF: albuminocytologic dissociation" },
-    { q: "57세 여자가 headache를 주소로 신경과 외래에 내원하였다. 환자가 호소하는 두통은 일주일 중 거의 5일 동안 발생하였으며, 심할 때는 하루 종일 아프기도 한다고 했다. <br>심할 때 약을 먹으면 조금 호전되기도 하지만 다시 악화된다고 했다.<br>주로 왼쪽 fronto-temporal area에 통증이 있었으며 심장박동 주기처럼 박동성의 욱씬거리는 통증이 있었다. 통증 위치는 여기 저기 돌아다니기도 한다. <br>가장 심할 때 통증강도는 VAS 7-8점 정도이다. 통증이 너무 심할 때는 아무 일도 할 수 없을 정도여서 누워만 있을 정도라고 했다. <br>특히나 큰 소리가 나거나 밝은 빛을 보면 더 심해져서 문을 다 닫고 커튼도 쳐놓고 가만히 누워 있어야 한다고 했다. <br>두통 시작 전에 눈앞에 어른거리는 증상이나 번쩍거림은 없었다고 한다. 다음 물음에 답하시오.<br>위 환자의 진단명을 쓰시고, 치료법을 아는 대로 쓰시오.", a: "진단명: 편두통<br>치료법: triptan과 에르고트로 치료하고, propranolol과 같은 베타차단제를 예방치료에 이용할 수 있습니다." }
+    { q: "57세 여자가 headache를 주소로 신경과 외래에 내원하였다. 환자가 호소하는 두통은 일주일 중 거의 5일 동안 발생하였으며, 심할 때는 하루 종일 아프기도 한다고 했다. <br>심할 때 약을 먹으면 조금 호전되기도 하지만 다시 악화된다고 했다.<br>주로 왼쪽 fronto-temporal area에 통증이 있었으며 심장박동 주기처럼 박동성의 욱씬거리는 통증이 있었다. 통증 위치는 여기 저기 돌아다니기도 한다. <br>가장 심할 때 통증강도는 VAS 7-8점 정도이다. 통증이 너무 심할 때는 아무 일도 할 수 없을 정도여서 누워만 있을 정도라고 했다. <br>특히나 큰 소리가 나거나 밝은 빛을 보면 더 심해져서 문을 다 닫고 커튼도 쳐놓고 가만히 누워 있어야 한다고 했다. <br>두통 시작 전에 눈앞에 어른거리는 증상이나 번쩍거림은 없었다고 한다. 다음 물음에 답하시오.<br>위 환자의 진단명을 쓰시고, 치료법을 아는 대로 쓰시오.", a: "진단명: 편두통<br>치료법: triptan과 에르고트로 치료하고, propranolol과 같은 베타차단제를 예방치료에 이용할 수 있습니다." },
+    { q: "Sensory aphasia를 보이는 환자에서 시행할 수 있는 language function test는?", a: "Fluency, comprehension, repetition" },
+    { q: "문제가 생겼을 때 Sensory aphasia가 발생하는 영역과 cerebral artery를 쓰시오.", a: "Wernicke's area, inferior branch of lt. MCA" },
+    { q: "편두통 환자에게 할 수 있는 급성 및 예방 치료를 각각 1개 이상 쓰시오.", a: "급성기: triptan, ergotamine <br>예방: 베타차단제(propranolol)" },
+    { q: "사진상의 환자에서 보이는 N/ex를 2가지 쓰시오.<br><img src='7.png' style='max-width:600px;'>", a: "종양 등에 의한 뒤쪽 척수 압박시 N/Ex <br>진동감각 소실(tuning fork), 관절 위치감각 소실(proprioception), Romberg test 양성, 감각성 실조(sensory ataxia), stamping gait, 미세촉각 저하(2-point discrimination 장애), 통증·온도감각은 보존(anterolateral system 정상)" },
+    { q: "??세 남자 전날 밤까지 증상 없었고, 8:00에 화장실 갈 때 증상 없었고, 8:30에 아침을 먹다가 오른팔에 힘이 없어서 9:00경 응급실에 내원하였다. <br>EKG 상 A-fib이 있었다. 약물 복용력과 질환력은 없다. <br>이 환자에게 시행할 수 있는 검사 혹은 치료를 1가지만 쓰시오.", a: "IV-tPA" },
+    { q: "TOAST를 5가지 쓰시오", a: "Large artery atherosclerosis, Cardioembolism, Small vessel occlusion, Stroke of Other determined Etiology, Stroke of undetermined etiology" },
+    { q: "Right VN 환자에게 보일 수 있는 N/ex를 3가지 쓰시오.", a: "HIT(+), GEN(-), skew deviation(-)" },
+    { q: "의식이 없는 환자에게 할 수 있는 N/ex를 5가지 쓰고, 간단히 설명하시오.", a: "light reflex : CN 2->3 이 관여하는 반사로, 동공에 빛을 쏘이면 양안의 동공수축이 발생해야 정상입니다. <br>gag reflex : CN 9, 10이 관여하는 반사로, 설압자로 혀 뒤쪽을 누르면 발생해야 정상입니다. <br>head impulse test : VOR, 전정기능을 평가하는 검사로 환자의 머리를 한쪽으로 빠르게 돌렸을 때 눈이 머리방향을 따라가지 않고 앞을 볼 수 있어야 정상입니다. 이상이 있는 경우 catch-up saccade가 나타납니다. <br>oculocephalic reflex(doll’s eye reflex) : 환자의 머리를 옆으로 돌렸을 때 눈이 머리를 따라 움직이지 않고 정면을 향해 있을 수 있어야 정상입니다. <br>병적 반사 : babinski sign, hoffmann sign 등" },
+    { q: "중증근무력증을 진단할 수 있는 검사를 2가지 이상 쓰시오.", a: "RNS test, Tensilon test, Single-fiber EMG, Serology(Ab test)" },
+    { q: "Myelopathy와 radiculopathy의 차이 및 구분할 수 있는 방법을 자유롭게 기술하시오.", a: "<img src='8.png' style='max-width:600px;'>" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" },
+    { q: "", a: "" }
   ];
 
   const KEY = {
